test/files/neg/source3XnegRefchecks.check
source3XnegRefchecks.scala:5: warning: shadowing a nested class of a parent is deprecated but class X shadows class X defined in class A; rename the class to something else
  class B extends A { class X; def f = new X }
                            ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
